<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuItemAdicionar"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/adicionar"
        app:showAsAction="ifRoom" />
    <group
        android:id="@+id/groupOrdenar"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menuItemOrdNome"
            android:title="@string/ordenar_nome" />
        <item
            android:id="@+id/menuItemOrdSetor"
            android:title="@string/ordenar_setor" />
        <item
            android:id="@+id/menuItemOrdSistema"
            android:title="@string/ordenar_sistema" />
    </group>
    <item
        android:id="@+id/menuItemSobre"
        android:title="@string/sobre" />
</menu>